# gentoo-cli

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  bench-regen.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.maki/: permissions.toml
benchmarks/scripts/: bench-sweep.sh  compare-regen.sh  compare-search.sh
conductor/tracks/repo_queries_20260519/: plan.md
portage-repo/: bench-regen.sh
src/: cli.rs  depgraph.rs  main.rs  search.rs
src/query/: depends.rs  keywords.rs  mod.rs  which.rs
